--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ aider-chat = "^0.56.0"
 azure-identity = "^1.17.1"
 azure-keyvault = "^4.2.0"
 pypdf = "^4.3.1"
+streamlit = "^1.38.0"
 
 
 [build-system]
