--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,12 @@ azure-identity = "^1.17.1"
 azure-keyvault = "^4.2.0"
 pypdf = "^4.3.1"
 streamlit = "^1.38.0"
+pandas = "^2.2.2"
+plotly = "^5.24.1"
+folium = "^0.17.0"
+streamlit-folium = "^0.22.0"
+flask = "^3.0.3"
+weasyprint = "^62.3"
 
 
 [build-system]
