--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ langchain = "^0.3.0"
 langgraph = "^0.2.21"
 langchain-openai = "^0.2.0"
 langchain-community = "^0.3.0"
-aider-chat = "^0.56.0"
+aider-chat = {git = "https://github.com/paul-gauthier/aider.git"}
 azure-identity = "^1.17.1"
 azure-keyvault = "^4.2.0"
 pypdf = "^4.3.1"
@@ -23,6 +23,7 @@ folium = "^0.17.0"
 streamlit-folium = "^0.22.0"
 flask = "^3.0.3"
 weasyprint = "^62.3"
+matplotlib = "^3.9.2"
 
 
 [build-system]
